@@ -1,3 +1,6 @@
+- Yves Orton <yves.orton@mciworldcom.de>, a CPAN tester, submitted a
+  patch to _Make_Path to fix warnings on Win32
+
 - Adam Tricket <ATricket@alarismed.com> and <yves.orton@mciworldcom.de> 
   helped debug the make test failure (due to fileglobs in Makefile.PL) on 
   Windows
